# sample

exchange_core/: .gitignore  CMakeLists.txt  DartConfiguration.tcl  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
exchange_core/include/exchange-core/: WFMPMC.h  WFSPMC.h  WFSPSC.h  exchange-core.h  message.h  shm.h
exchange_core/lib/cmake/exchange-core/: exchange-core-config.cmake
exchange_phemex/: .gitignore  CMakeLists.txt
exchange_phemex/include/exchange-phemex/: HttpConnection.hpp  MarketDataService.hpp  TradeService.hpp  WSConnection.hpp  exchange-phemex.h
exchange_phemex/test/: CMakeLists.txt  MarketDataTest.hpp  TradeTest.hpp  main.cpp  test.py  testtrade.py  ws_market_test.hpp  wstest.cpp
